fix img size on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,7 +35,7 @@
       margin-right: 0;
     }
     .archive__item-teaser {
-      .img {
+      img {
         width:100%;
         height:100%;
       }
